--- a/docs/medium/style.css
+++ b/docs/medium/style.css
@@ -1,8 +1,8 @@
 /**
  * Onepoint inspired theme for reveal.js
  */
-@import url("../themes/main/styles.css");
-@import url("../themes/main/semantic.css");
+@import url("../themes/onepoint/styles.css");
+@import url("../themes/onepoint/semantic.css");
 
 /**
  * Ajustements ici
